2005-02-10  Sven Neumann  <sven@gimp.org>

	* app/file/file-save.c (file_save_as): applied a (slightly
	modified) patch from Shlomi Fish that automatically adds the .xcf
	extension if none is given (bug #165684).

2005-02-10  Sven Neumann  <sven@gimp.org>

	* app/actions/data-commands.c
	* app/actions/edit-commands.c
	* app/actions/error-console-commands.c
	* app/actions/file-commands.c
	* app/actions/gradient-editor-commands.c
	* app/actions/gradients-commands.c
	* app/actions/plug-in-commands.c
	* app/actions/templates-commands.c
	* app/actions/text-editor-commands.c
	* app/actions/tool-options-commands.c
	* app/dialogs/image-new-dialog.c
	* app/dialogs/resize-dialog.c
	* app/display/gimpdisplayshell-close.c
	* app/display/gimpdisplayshell-filter-dialog.c
	* app/display/gimpdisplayshell-scale.c
	* app/tools/gimpimagemaptool.c
	* app/tools/gimptexttool.c
	* libgimp/gimpexport.c
	* libgimpwidgets/gimpcolorbutton.c
	* libgimpwidgets/gimpfileentry.c
	* libgimpwidgets/gimpquerybox.c
	* libgimpwidgets/gimpunitmenu.c: applied another patch by Patrice
	Tremblay to make more dialogs obey the alternative button order
	setting (bug #166678).

2005-02-09  Manish Singh  <yosh@gimp.org>

	* app/text/gimpfont-utils.[ch]: new function to workaround pango
	bug #166540, by tacking on a ',' to font names that end in numbers,
	so pango_font_description_from_string doesn't interpret it as a size.

	* app/text/Makefile.am: add above files.

	* app/text/gimpfontlist.c
	* app/text/gimptext-compat.c: use new function.

	* app/text/gimptext-xlfd.c: also make sure font names pulled out
	from XLFD don't end in numbers.

	* app/text/gimpfont.c
	* app/text/gimptextlayout.c: remove some redundant checks.

2005-02-09  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/display/gimpdisplayshell-callbacks.c 
	(gimp_display_shell_canvas_tool_events):  For testing, apply
	patch switching display-wide grab to app-wide grab while
	handling button-release event, see bug #162823.
