@@ -1,5 +1,11 @@
 2005-02-10  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/displace.c: applied a modified patch from Joao
+	S. O. Bueno Calligaris that adds a polar mode to the Displace
+	plug-in (bug #161131).
+
+2005-02-10  Sven Neumann  <sven@gimp.org>
+
 	* app/file/file-save.c (file_save_as): applied a (slightly
 	modified) patch from Shlomi Fish that automatically adds the .xcf
 	extension if none is given (bug #165684).
